--- a/page1.html
+++ b/page1.html
@@ -48,10 +48,10 @@
 			</div>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-bs-toggle="collapse" data-target="#navbarSupportedContent" data-bs-target="#navbarSupportedContent" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
 				<div class="hamburger">
-					<span></span>
-					<span></span>
-					<span></span>
-					<span></span>
+					<span style="background-color: white !important;"></span>
+                    <span style="background-color: white !important;"></span>
+                    <span style="background-color: white !important;"></span>
+                    <span style="background-color: white !important;"></span>		
 				</div>
 			</button>
 			<div class="collapse navbar-collapse opacityScrollOff" id="navbarSupportedContent">
